# ComfyUI-DetailGen3D

./: LICENSE  README.md  __init__.py  __prestartup_script__.py  comfy-test.toml  install.py  prestartup_script.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: __init__.py  decode.py  generate.py  load_model.py  load_texture_model.py  prepare_mesh.py  texture.py  utils.py
workflows/: basic_workflow.json  texture.json
