[project]
name = "comfyui-detailgen3d"
description = "THIS NODE IS WIP. ComfyUI wrapper for DetailGen3D: enhance coarse 3D meshes with geometric detail. Compatible with GeometryPack."
version = "0.0.1"
license = {file = "LICENSE"}
requires-python = ">=3.10"

dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-DetailGen3D"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-DetailGen3D#readme"
"Bug Tracker" = "https://github.com/PozzettiAndrea/ComfyUI-DetailGen3D/issues"

# ComfyUI Registry configuration
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "DetailGen3D"
Icon = ""
